--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="logo">
+        <img src="https://github.com/reyanson/Stopwatch-Application/blob/main/logo.png" width="50" height="50" alt="github"/></a><br></center>
+    </div>
     
     <div class="container">
         <h1 class="title"> Stopwatch Timer</h1>
