--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch Application</title>
+    <link rel="icon" type="image/x-icon" href="https://github.com/reyanson/Stopwatch-Application/blob/main/logo.svg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="logo">
-        <img src="https://github.com/reyanson/Stopwatch-Application/blob/main/logo.png" width="50" height="50" alt="github"/></a><br></center>
+        
+        <img src="logo.svg" width="200" height="200" alt="github"/></a><br></center>
     </div>
     
     <div class="container">
