logo and combine file added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="logo">
         
-        <img src="logo.svg" width="200" height="200" alt="github"/></a><br></center>
+        <img src="https://raw.githubusercontent.com/reyanson/Stopwatch-Application/main/logo.svg" width="200" height="200" alt="github"/>
     </div>
     
     <div class="container">
